[package]
name = "braw"
version = "0.1.0"
edition = "2024"
authors = ["Adrian <adrian.eddy at gmail>"]
description = "Rust bindings for Blackmagic RAW SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AdrianEddy/braw-rs"
readme = "README.md"
keywords = ["blackmagic", "braw", "video"]
categories = ["video", "media-processing"]

[dependencies]
log = "0.4"
paste = "1.0"
libloading = "0.8"
futures-util = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation","Win32_System_Com","Win32_System_Variant", "Win32_System_Ole"] }

[dev-dependencies]
pollster = "0.4"
